@@ -4,6 +4,8 @@
 	  - when adding ROWID columns in a SELECT statement, make sure to also
 	    modify ORDER BY clauses if necessary
 	  - don't add ROWID clauses if there is a DISTINCT clause
+	  - fixed rendering of SELECT statements when a COMPOUND statement is used
+	    as the FROM part of another statement
 
 2009-04-19  Vivien Malerba <malerba@gnome-db.org>
 
